@@ -256,6 +256,22 @@ name|hadoop
 operator|.
 name|hdfs
 operator|.
+name|protocolPB
+operator|.
+name|DatanodeProtocolClientSideTranslatorPB
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
 name|server
 operator|.
 name|common
@@ -362,7 +378,61 @@ name|server
 operator|.
 name|protocol
 operator|.
+name|BlockReportContext
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|server
+operator|.
+name|protocol
+operator|.
+name|DatanodeRegistration
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|server
+operator|.
+name|protocol
+operator|.
 name|DatanodeStorage
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|server
+operator|.
+name|protocol
+operator|.
+name|StorageBlockReport
 import|;
 end_import
 
@@ -555,6 +625,16 @@ import|;
 end_import
 
 begin_import
+import|import
+name|org
+operator|.
+name|mockito
+operator|.
+name|Mockito
+import|;
+end_import
+
+begin_import
 import|import static
 name|org
 operator|.
@@ -677,6 +757,42 @@ operator|.
 name|Assert
 operator|.
 name|fail
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|mockito
+operator|.
+name|Matchers
+operator|.
+name|any
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|mockito
+operator|.
+name|Matchers
+operator|.
+name|anyString
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|mockito
+operator|.
+name|Mockito
+operator|.
+name|timeout
 import|;
 end_import
 
@@ -4602,6 +4718,194 @@ name|getDfsUsed
 argument_list|()
 operator|>
 name|used
+argument_list|)
+expr_stmt|;
+block|}
+comment|/** Test that a full block report is sent after hot swapping volumes */
+annotation|@
+name|Test
+argument_list|(
+name|timeout
+operator|=
+literal|100000
+argument_list|)
+DECL|method|testFullBlockReportAfterRemovingVolumes ()
+specifier|public
+name|void
+name|testFullBlockReportAfterRemovingVolumes
+parameter_list|()
+throws|throws
+name|IOException
+throws|,
+name|ReconfigurationException
+block|{
+name|Configuration
+name|conf
+init|=
+operator|new
+name|Configuration
+argument_list|()
+decl_stmt|;
+name|conf
+operator|.
+name|setLong
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_BLOCK_SIZE_KEY
+argument_list|,
+name|BLOCK_SIZE
+argument_list|)
+expr_stmt|;
+comment|// Similar to TestTriggerBlockReport, set a really long value for
+comment|// dfs.heartbeat.interval, so that incremental block reports and heartbeats
+comment|// won't be sent during this test unless they're triggered
+comment|// manually.
+name|conf
+operator|.
+name|setLong
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_BLOCKREPORT_INTERVAL_MSEC_KEY
+argument_list|,
+literal|10800000L
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|setLong
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_HEARTBEAT_INTERVAL_KEY
+argument_list|,
+literal|1080L
+argument_list|)
+expr_stmt|;
+name|cluster
+operator|=
+operator|new
+name|MiniDFSCluster
+operator|.
+name|Builder
+argument_list|(
+name|conf
+argument_list|)
+operator|.
+name|numDataNodes
+argument_list|(
+literal|2
+argument_list|)
+operator|.
+name|build
+argument_list|()
+expr_stmt|;
+name|cluster
+operator|.
+name|waitActive
+argument_list|()
+expr_stmt|;
+specifier|final
+name|DataNode
+name|dn
+init|=
+name|cluster
+operator|.
+name|getDataNodes
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+decl_stmt|;
+name|DatanodeProtocolClientSideTranslatorPB
+name|spy
+init|=
+name|DataNodeTestUtils
+operator|.
+name|spyOnBposToNN
+argument_list|(
+name|dn
+argument_list|,
+name|cluster
+operator|.
+name|getNameNode
+argument_list|()
+argument_list|)
+decl_stmt|;
+comment|// Remove a data dir from datanode
+name|File
+name|dataDirToKeep
+init|=
+operator|new
+name|File
+argument_list|(
+name|cluster
+operator|.
+name|getDataDirectory
+argument_list|()
+argument_list|,
+literal|"data1"
+argument_list|)
+decl_stmt|;
+name|dn
+operator|.
+name|reconfigurePropertyImpl
+argument_list|(
+name|DFS_DATANODE_DATA_DIR_KEY
+argument_list|,
+name|dataDirToKeep
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// We should get 1 full report
+name|Mockito
+operator|.
+name|verify
+argument_list|(
+name|spy
+argument_list|,
+name|timeout
+argument_list|(
+literal|60000
+argument_list|)
+operator|.
+name|times
+argument_list|(
+literal|1
+argument_list|)
+argument_list|)
+operator|.
+name|blockReport
+argument_list|(
+name|any
+argument_list|(
+name|DatanodeRegistration
+operator|.
+name|class
+argument_list|)
+argument_list|,
+name|anyString
+argument_list|()
+argument_list|,
+name|any
+argument_list|(
+name|StorageBlockReport
+index|[]
+operator|.
+expr|class
+argument_list|)
+argument_list|,
+name|any
+argument_list|(
+name|BlockReportContext
+operator|.
+name|class
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
